Fix failsafe plugin phases